debug-industry =>  resolve modal loading lag debug-industry =>  none the visibility of project request

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3068,7 +3068,7 @@ div.no-project > span.disable-border-button {
 .box .box-body .value span:first-child {
     color: #3CCD1C;
     font-weight: bolder;
-    font-size: 25px;
+    font-size: 20px;
     display: inline-block;
 }
 
